Added etherpad for event sign up.

--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
         </li>
       </ul>
       <footer class="notes">
+          mention Spade
       </footer>
     </section>
   </div></div>
@@ -268,6 +269,7 @@
            alt="Firefox for Android">
       <p>Tomorrow (Tues) 12pm PT in 10 forward</p>
       <p>Come test, report bugs, and have lunch!</p>
+      <p><a href="https://etherpad.mozilla.org/mobilewebtestevent">https://etherpad.mozilla.org/mobilewebtestevent</a></p>
       <footer class="notes">
       </footer>
     </section>
