Removed bullet about Chrome and Safari to save time. Added "sign-up" to test event slide.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
       <ul class="inner">
         <li class="active">is not directly under Mozilla's control</li>
         <li class="active">has a direct impact on the user experience of these products</li>
-        <li class="spacer">is Webkit based - works well in Safari and Chrome</li>
       </ul>
       <footer class="notes">
       </footer>
@@ -269,7 +268,7 @@
            alt="Firefox for Android">
       <p>Tomorrow (Tues) 12pm PT in 10 forward</p>
       <p>Come test, report bugs, and have lunch!</p>
-      <p><a href="https://etherpad.mozilla.org/mobilewebtestevent">https://etherpad.mozilla.org/mobilewebtestevent</a></p>
+      <p>Sign-up! <a href="https://etherpad.mozilla.org/mobilewebtestevent">https://etherpad.mozilla.org/mobilewebtestevent</a></p>
       <footer class="notes">
       </footer>
     </section>
