Added note about bringing an Android phone to the test event.

--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
       <p>Tomorrow (Tues) 12pm PT in 10 forward</p>
       <p>Come test, report bugs, and have lunch!</p>
       <p>Sign-up! <a href="https://etherpad.mozilla.org/mobilewebtestevent">https://etherpad.mozilla.org/mobilewebtestevent</a></p>
+      <p>Remember to bring your Android phone</p>
       <footer class="notes">
       </footer>
     </section>
